# Minimax-Openbox-sdk

openbox-langchain-sdk-python/: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml  sonar-project.properties
openbox-langchain-sdk-python/.github/: CODEOWNERS
openbox-langchain-sdk-python/.github/workflows/: pr-governance.yml  pr-quality.yml  pr-security.yml  publish.yml
openbox-langchain-sdk-python/docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
openbox-langchain-sdk-python/examples/content-builder-agent/: README.md  content_writer.py  pyproject.toml
openbox-langchain-sdk-python/examples/content-builder-agent/blogs/langchain-overview/: post.md
openbox-langchain-sdk-python/examples/content-builder-agent/blogs/prompt-engineering/: post.md
openbox-langchain-sdk-python/examples/content-builder-agent/research/: langchain-overview.md  prompt-engineering.md
openbox-langchain-sdk-python/examples/content-studio-pipeline/: .env.example  .gitignore  README.md  compliance_review_graph.py  content_strategy_agent.py  gate_agent.py  image_agent.py  ingestion.py  pipeline.py  pyproject.toml
openbox-langchain-sdk-python/examples/content-studio-pipeline/dashboard/: app.py
openbox-langchain-sdk-python/examples/content-studio-pipeline/dashboard/static/: chat.css  style.css
openbox-langchain-sdk-python/examples/content-studio-pipeline/dashboard/templates/: campaign.html  chat.html  index.html
openbox-langchain-sdk-python/openbox_langchain/: __init__.py  middleware.py  middleware_factory.py  middleware_hook_handlers.py  middleware_hooks.py  middleware_tool_hook.py
openbox-langchain-sdk-python/tests/: conftest.py  test_middleware.py  test_middleware_factory.py  test_middleware_hook_handlers.py  test_middleware_hooks.py  test_middleware_tool_hook.py
openbox-langchain-sdk-python/workflow/: Content Studio Workflow.json
