[project]
name = "content-builder-agent"
version = "0.1.0"
description = "A content writer agent using LangChain + OpenBox governance"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "google-genai>=1.0.0",
    "openbox-langchain-sdk-python>=0.2.0",
    "langsmith>=0.8.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "tavily-python>=0.5.0",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = []
