[project]
name = "content-studio-pipeline"
version = "0.1.0"
description = "OpenBox Content Studio Pipeline — LangChain + LangGraph + MiniMax with OpenBox governance"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=1.3.3",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "openbox-langchain-sdk-python>=0.2.0",
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = []
